--- a/Treinamento_da_Rede_YOLO.ipynb
+++ b/Treinamento_da_Rede_YOLO.ipynb
@@ -6,7 +6,7 @@
         "id": "MxaV4Y1kCZVO"
       },
       "source": [
-        "🧠 1. Instalação do Roboflow e Importação do Dataset"
+        "## 🧠 1. Instalação do Roboflow e Importação do Dataset"
       ]
     },
     {
@@ -119,7 +119,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "📦 2. Clone do Repositório YOLOv5 e Instalação de Dependências"
+        "## 📦 2. Clone do Repositório YOLOv5 e Instalação de Dependências"
       ]
     },
     {
@@ -294,7 +294,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "📁 3. Verificação e Ajuste do Caminho do Dataset"
+        "## 📁 3. Verificação e Ajuste do Caminho do Dataset"
       ]
     },
     {
@@ -361,7 +361,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "⚙️ 4. Criação e Edição do Arquivo data.yaml"
+        "## ⚙️ 4. Criação e Edição do Arquivo data.yaml"
       ]
     },
     {
@@ -393,7 +393,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "🚀 5. Treinamento do Modelo YOLOv5"
+        "## 🚀 5. Treinamento do Modelo YOLOv5"
       ]
     },
     {
@@ -5268,7 +5268,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "🚀 6. Treinamento do Modelo YOLOv5m"
+        "## 🚀 6. Treinamento do Modelo YOLOv5m"
       ]
     },
     {
